--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@
     color: rgb(100, 64, 97);
     background: antiquewhite url('../images/background.jpg') center center/cover no-repeat;
   }
-  
+
   /* Create slideshow */
   .slideshow {display:none; height: 92vh;}
   .slideshow img {vertical-align: middle; height: 92vh; width: 100%;}
@@ -23,7 +23,7 @@
     margin: auto;
     position: relative;
     height: 92vh;
-    width: 100vw;
+    width: 100%;
   }
 
   /* Caption titles and text */
@@ -41,7 +41,7 @@
     color: white;
     background-color: rgb(100, 64, 97, .7);
     text-shadow: 3px 5px 2px rgb(100, 64, 97);
-    -webkit-box-shadow: 5px 5px 15px 5px #000000; 
+    -webkit-box-shadow: 5px 5px 15px 5px #000000;
     box-shadow: 5px 5px 15px 5px #000000;
   }
 
@@ -67,7 +67,7 @@
     width: 50%;
     border-bottom: 3px solid rgb(238, 172, 85);
   }
-  
+
   /* Number text (1/4 etc) */
   .numbertext {
     color: #f2f2f2;
@@ -102,12 +102,12 @@
   }
 
   @-webkit-keyframes fade {
-    from {opacity: .4} 
+    from {opacity: .4}
     to {opacity: 1}
   }
 
   @keyframes fade {
-    from {opacity: .4} 
+    from {opacity: .4}
     to {opacity: 1}
   }
 
@@ -146,7 +146,7 @@
     float: right;
     margin: .5vw 0 5vw 2vw;
   }
-  
+
   /* Clear floats */
   .clearfix::after {
     content: "";
@@ -157,7 +157,7 @@
   /* Style manufacturers banner */
   #manufacturers_showcase {
     position: relative;
-    top: 10vh; 
+    top: 10vh;
     height: 35vh;
     background-color: rgb(100, 64, 97);
     opacity: .8;
@@ -188,11 +188,11 @@
   /* Style the clients' testimonials */
   #testimonials {
     position: relative;
-    top: 10vh; 
+    top: 10vh;
     height: 80vh;
     background-color: transparent;
   }
-  
+
   .testimonials-container {
     margin-top: 15vh;
     margin: 0 auto;
@@ -206,7 +206,7 @@
     border-radius: 90%;
     background-color: rgb(100, 64, 97, .7);
     text-shadow: 3px 5px 2px rgb(100, 64, 97);
-    -webkit-box-shadow: 5px 5px 15px 5px #000000; 
+    -webkit-box-shadow: 5px 5px 15px 5px #000000;
     box-shadow: 5px 5px 15px 5px #000000;
   }
 
@@ -214,7 +214,7 @@
     font-family: 'Amatic SC', cursive;
     font-size: 1.2em;
     font-weight: bold;
-    text-align: center; 
+    text-align: center;
     margin: 1.5em;
     color: white;
   }
@@ -244,7 +244,7 @@
   .gallerySlides>img {
     width: 100%;
     height: 80vh;
-  } 
+  }
 
   /* Hide the images by default */
   .gallerySlides {display: none;}
@@ -314,4 +314,3 @@
 
 
 
-    
